# AMRpy-utils

./: .gitignore  AMRflatten.py  AMRh5.py  LICENSE  README.md  bisiclesh5.py  constants.py  example.py  icesheet_diagnostics.py  plot_maps.py  pyproject.toml
examples/: example.py
processing/: icesheet_diagnostics.py
src/amrpy_utils/: AMRh5.py  __init__.py  create_video.py  plot_maps.py
