[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "amrpy_utils"
description = "Tools for reading, analysing and plotting data from Chombo-based AMR simulation plotfiles"
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Tom Mitcham"},
  { name = "Tony Payne"},
  { name = "Steph Cornford"}
]
maintainers = [
  { name = "Tom Mitcham", email = "tom.mitcham@bristol.ac.uk" },
]
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "h5py"
]
